# xtream

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  player.mjs  script.js  style.css
src/: main.rs  room.rs
