[package]
name = "xtream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
serde_json = "1.0"
clap = { version = "4.5.19", features = ["derive"] }

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng"]
